# scarecrow-settings-daemon

./: .gitignore  NEWS  fix_dist.sh  meson.build
data/: gnome-settings-daemon.convert  io.github.scarecrow-de.settings-daemon.peripherals.gschema.xml.in  io.github.scarecrow-de.settings-daemon.peripherals.wacom.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.color.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.housekeeping.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.media-keys.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.power.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.sharing.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.wwan.gschema.xml.in  io.github.scarecrow-de.settings-daemon.plugins.xsettings.gschema.xml.in  io.github.scarecrow.settings-daemon.peripherals.gschema.xml.in  io.github.scarecrow.settings-daemon.peripherals.wacom.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.color.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.housekeeping.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.media-keys.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.power.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.sharing.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.wwan.gschema.xml.in  io.github.scarecrow.settings-daemon.plugins.xsettings.gschema.xml.in  io.github.scarecrow_de.settings-daemon.peripherals.wacom.gschema.xml.in  meson.build  scarecrow-settings-daemon.convert  scsd-enums.h
gnome-settings-daemon/: gnome-settings-bus.h  meson.build
plugins/: gsd.service.in  io.github.scarecrow_de.SettingsDaemon.Real.desktop.in  meson.build  scsd.service.in
plugins/a11y-settings/: gsd-a11y-settings-manager.c  main.c  meson.build  scsd-a11y-settings-manager.c  scsd-a11y-settings-manager.h
plugins/color/: gcm-self-test.c  gsd-color-calibrate.c  gsd-color-manager.c  gsd-color-state.c  gsd-night-light.c  main.c  meson.build  scarecrow-datetime-source.c  scsd-color-calibrate.c  scsd-color-calibrate.h  scsd-color-manager.c  scsd-color-manager.h  scsd-color-profiles.c  scsd-color-profiles.h  scsd-color-state.c  scsd-color-state.h  scsd-night-light-common.c  scsd-night-light-common.h  scsd-night-light.c  scsd-night-light.h
plugins/common/: daemon-skeleton-gtk.h  daemon-skeleton.h  gsd-shell-helper.h  meson.build  scsd-input-helper.c  scsd-settings-migrate.c  scsd-settings-migrate.h  scsd-shell-helper.c  scsd-shell-helper.h
plugins/datetime/: gsd-datetime-manager.c  gsd-timezone-monitor.c  main.c  meson.build  scsd-datetime-manager.c  scsd-datetime-manager.h  scsd-timezone-monitor.c  scsd-timezone-monitor.h  weather-tz.c
plugins/housekeeping/: gsd-disk-space.c  gsd-housekeeping-manager.c  main.c  meson.build  scsd-disk-space-helper.c  scsd-disk-space-helper.h  scsd-disk-space-test.c  scsd-disk-space.c  scsd-disk-space.h  scsd-empty-trash-test.c  scsd-housekeeping-manager.c  scsd-housekeeping-manager.h  scsd-purge-temp-test.c
plugins/keyboard/: gsd-keyboard-manager.c  main.c  meson.build  scsd-keyboard-manager.c  scsd-keyboard-manager.h
plugins/media-keys/: README.media-keys-API  audio-selection-test.c  gsd-media-keys-manager.c  gsd-screenshot-utils.c  io.github.scarecrow.ShellKeyGrabber.xml  main.c  meson.build  scsd-media-keys-manager.c  scsd-media-keys-manager.h  scsd-screenshot-utils.c  scsd-screenshot-utils.h  shortcuts-list.h
plugins/power/: gpm-common.c  gpm-common.h  gsd-power-manager.c  io.github.scarecrow.settings-daemon.plugins.power.policy.in.in  io.github.scarecrow_de.settings-daemon.plugins.power.policy.in.in  main.c  meson.build  scsd-backlight-helper.c  scsd-backlight.c  scsd-backlight.h  scsd-power-constants-update.pl  scsd-power-enums-update.c  scsd-power-enums.c.in  scsd-power-manager.c  scsd-power-manager.h  scsdpowerconstants.py  test.py
plugins/print-notifications/: gsd-print-notifications-manager.c  gsd-printer.c  main.c  meson.build  scsd-print-notifications-manager.c  scsd-print-notifications-manager.h  scsd-printer.c
plugins/rfkill/: gsd-rfkill-manager.c  main.c  meson.build  scsd-rfkill-manager.c  scsd-rfkill-manager.h
plugins/screensaver-proxy/: gsd-screensaver-proxy-manager.c  main.c  meson.build  (+2 more)
plugins/sharing/: gsd-sharing-manager.c  main.c  meson.build  scsd-sharing-manager.c  scsd-sharing-manager.h
plugins/smartcard/: gsd-smartcard-manager.c  gsd-smartcard-service.c  gsd-smartcard-service.h  gsd-smartcard-utils.c  io.github.scarecrow.SettingsDaemon.Smartcard.xml  main.c  meson.build  scsd-smartcard-manager.c  scsd-smartcard-manager.h  scsd-smartcard-service.c  scsd-smartcard-service.h  scsd-smartcard-utils.c  scsd-smartcard-utils.h
plugins/sound/: gsd-sound-manager.c  main.c  meson.build  scsd-sound-manager.c  scsd-sound-manager.h
plugins/usb-protection/: gsd-usb-protection-manager.c  main.c  meson.build  scsd-usb-protection-manager.c  scsd-usb-protection-manager.h
plugins/wacom/: gsd-wacom-manager.c  io.github.scarecrow.settings-daemon.plugins.wacom.policy.in.in  io.github.scarecrow_de.settings-daemon.plugins.wacom.policy.in.in  main.c  meson.build  scsd-wacom-manager.c  scsd-wacom-manager.h  scsd-wacom-oled-helper.c  scsd-wacom-oled.c  scsd-wacom-oled.h
plugins/wwan/: gsd-wwan-manager.c  main.c  meson.build  scsd-wwan-manager.c  scsd-wwan-manager.h
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  (+59 more)
scarecrow-settings-daemon/: gnome-settings-bus.c  meson.build  scarecrow-settings-bus.c  scarecrow-settings-bus.h  scarecrow-settings-module.c  scarecrow-settings-plugin-info.c  scarecrow-settings-profile.c
tests/: gsdtestcase.py  scsdtestcase.py
(+12 files in other folders)
